--- a/blog/templates/blog/post_form.html
+++ b/blog/templates/blog/post_form.html
@@ -5,7 +5,7 @@
 <div class="container">
   <div class="card w-100 shadow-xss rounded-xxl border-0 p-4 my-3">
     <div class="card-body p-0 mb-3 d-flex justify-content-center">
-        <h2>Create New Post</h2>
+      <h2>Create New Post</h2>
     </div>
     <div class="card-body p-0 mb-3 rounded-3">
       <form class="form-container" 
@@ -14,19 +14,23 @@
         enctype="multipart/form-data">
         {% csrf_token %}
         <div class="w-100 border border-dark border-rounded 
-          d-flex align-items-center justify-content-center" 
+          d-flex flex-column align-items-center justify-content-center position-relative" 
           style="height:400px;">
           <input type="file" 
-            class="form-control w-100 h-100 border-0" 
-            id="imageInput" 
+            class="form-control w-100 h-100 border-0 position-absolute opacity-0" 
+            id="imageInput"
+            name="img"
             accept="image/*">
+          <label for="imageInput"
+            class="text-grey-500 opacity-50 position-absolute d-flex align-items-center justify-content-center w-100 h-100" 
+            style="cursor:pointer; font-size: 8vw;">
+            UPLOAD IMAGE
+          </label>
           <div id="previewContainer" 
             class="align-items-center justify-content-center w-100 h-100 position-relative">
             <img class="w-100 h-100 object-fit-contain" 
               id="imagePreview" 
-              src="#" 
-              alt="Image Preview" 
-              name="img">
+              alt="Image Preview">
             <button type="button" 
               class="btn btn-danger btn-sm rounded-circle position-absolute 
               d-flex align-items-center justify-content-center p-0 top-0 end-0 m-2" 
@@ -43,59 +47,62 @@
         </div>
         <div class="card-body p-0 me-lg-5">
           <input type="hidden" name="timezone" id="user-timezone" value="">
-          <button type="submit">Create Post</button>
+          <button class="btn btn-success" type="submit">Create Post</button>
+          <a href="{% url 'home' %}" 
+            class="btn btn-outline-danger">
+            Cancel
+          </a>
         </div>
       </form>
-      <form action="{% url 'home' %}" method="get">
-        {% csrf_token %}
-        <button type="submit">Cancel</button>
-      </form>
-    </div>
-      
-      <script>
-        const imageInput = document.getElementById('imageInput');
-        const previewContainer = document.getElementById('previewContainer');
-        const imagePreview = document.getElementById('imagePreview');
-        const closeButton = document.getElementById('closeButton');
-
-        imageInput.addEventListener('change', function(event) {
-            const file = event.target.files[0];
-
-            if (file) {
-                const reader = new FileReader();
-
-                reader.onload = function(e) {
-                    imagePreview.src = e.target.result;
-                    previewContainer.style.display = 'flex';
-                    closeButton.style.display = 'block';
-                    imageInput.style.display = 'none';
-                }
-
-                reader.readAsDataURL(file);
-            } else {
-                clearImage();
-            }
-        });
-
-        closeButton.addEventListener('click', function() {
-            clearImage();
-        });
-
-        function clearImage() {
-            imagePreview.src = '#';
-            previewContainer.style.display = 'none';
-            closeButton.style.display = 'none';
-            imageInput.value = ''; // Clear the file input
-            imageInput.style.display = 'block';
-        }
-        
-        // Get the user's timezone
-        var userTimezone = Intl.DateTimeFormat().resolvedOptions().timeZone;
-        // Set the value of the hidden input field
-        document.getElementById('user-timezone').value = userTimezone;
-      </script>
     </div>
   </div>
+</div>
+
+<script>
+  const imageInput = document.getElementById('imageInput');
+  const previewContainer = document.getElementById('previewContainer');
+  const imagePreview = document.getElementById('imagePreview');
+  const closeButton = document.getElementById('closeButton');
+  const imageLabel = document.querySelector('label[for="imageInput"]')
+
+  imageInput.addEventListener('change', function(event) {
+    const file = event.target.files[0];
+
+    if (file) {
+        const reader = new FileReader();
+
+        reader.onload = function(e) {
+          imageLabel.style.visibility = 'hidden';
+          imagePreview.src = e.target.result;
+          previewContainer.style.display = 'flex';
+          closeButton.style.display = 'block';
+          imageInput.style.display = 'none';
+        }
+
+        reader.readAsDataURL(file);
+    } else {
+        clearImage();
+    }
+  });
+
+  closeButton.addEventListener('click', function() {
+    clearImage();
+  });
+
+  function clearImage() {
+    imagePreview.src = '#';
+    previewContainer.style.display = 'none';
+    closeButton.style.display = 'none';
+    imageInput.value = '';
+    imageInput.style.display = 'block';
+    imageLabel.style.visibility = 'visible';
+  }
+
+  // Get the user's timezone
+  var userTimezone = Intl.DateTimeFormat().resolvedOptions().timeZone;
+  // Set the value of the hidden input field
+  document.getElementById('user-timezone').value = userTimezone;
+</script>
 {% endblock %}
 
 
