--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -38,8 +38,8 @@
   <div class="card w-100 shadow-xss rounded-xxl border-0 p-4 mb-3">
     <div class="card-body p-0 d-flex">
       <figure class="avatar me-3">
-        {% if user.profile.profile_picture %}
-          <img src="{{ user.profile.profile_picture.url }}"
+        {% if post.owner.profile.profile_picture %}
+          <img src="{{ post.owner.profile.profile_picture.url }}"
             class="shadow-sm rounded-circle img-45"
             alt="{{ user.username }} Profile Picture" 
             width="26" height="26">
@@ -62,12 +62,15 @@
 
     {% if post.img %}
       <div class="card-body p-0 mb-3 rounded-3 overflow-hidden">
-        <img src="{{post.img.url}}" alt="{{post.owner}}" class="float-right w-100" style="max-height:700px;">
+        <img src="{{post.img.url}}" 
+          alt="{{post.owner}}" 
+          class="float-right w-100" 
+          style="max-height:700px;">
       </div>
     {% endif %}
     
     <div class="card-body p-0 me-lg-5">
-        <p class="fw-500 lh-26 font-xssss w-100 mb-2">
+        <p class="fw-500 lh-26 font-xsss w-100 mb-2">
           <a class="text-dark" href="{% url 'external-user-profile' post.owner.username %}">
             <strong>
               {{post.owner}}
@@ -79,8 +82,8 @@
     </div>
     
     <div class="card-body d-flex p-0">
-      <a href="{% url 'post-like' post.pk%}" class="emoji-bttn d-flex align-items-center fw-600 
-        text-grey-900 text-dark lh-26 font-xssss me-2">
+      <a href="{% url 'post-like' post.pk%}" class="d-flex align-items-center fw-600 
+        text-grey-900 lh-26 font-xssss me-2">
         {% if post.id in liked %}
           <i class="bi bi-heart-fill color-red me-1 btn-round-sm font-lg"></i> 
         {% else %}
@@ -89,12 +92,12 @@
         {{ post.likes_count }} Like
       </a>
       <a href="{% url 'comments' post.id %}" class="d-flex align-items-center fw-600 
-        text-grey-900 text-dark lh-26 font-xssss">
+        text-grey-900 lh-26 font-xssss">
         <i class="bi bi-chat text-dark text-grey-900 btn-round-sm font-lg"></i>
-        <span>{{ post.comments_count }}</span>
+        <span>{{ post.comments_count }} Comments</span>
       </a>
       <a href="#" class="ms-auto d-flex align-items-center 
-        fw-600 text-grey-900 text-dark lh-26 font-xssss">
+        fw-600 text-grey-900 lh-26 font-xssss">
         <i class="bi bi-share text-grey-900 text-dark btn-round-sm font-lg"></i>
         <span>Share</span>
       </a>
