--- a/blog/templates/blog/post_comments_view.html
+++ b/blog/templates/blog/post_comments_view.html
@@ -1,80 +1,225 @@
 {% extends 'blog/_base.html' %}
-
+{% load static %}
 {% block content %}
-<h2>Comments</h2>
-{% if post.img %}
-  <img src="{{post.img.url}}" alt="{{post.title}}" width="200px" height="200px">
-{% else %}
-  No Image Available
-{% endif %}
-<li>Author: <a href="{% url 'external-user-profile' post.owner %}">{{post.owner}}</a></li>
-<li>Likes: {{ post.likes_count }}</li>
-<li>Posted: {{post.posted_date|timesince}} ago</li>
-<li>Description: {{post.description}}</li>
-<form action="{% url 'post-like' post.pk %}" method="POST">
-  {% csrf_token %}
-  <button type="submit">
-    {% if post.id in liked_post %}
-      Unlike
-    {% else %}
-      Like
-    {% endif%}
-  </button>
-</form>
-<hr>
-<form action="{% url 'comments' post.id %}" method="POST">
-  {% csrf_token %}
-  <p>{{request.user.username}} {{comment_form.as_p}}</p>
-  <button type="submit">Post Comment</button>
-</form>
-<hr>
-{% for comment in comments %}
-{% if not comment.parent_comment %}
-  <li><a href="{% url 'external-user-profile' comment.user %}">{{comment.user.username}}</a>: {{comment.text}}</li>
-  <li>{{comment.posted_date|timesince}} ago</li>
-  <li>Likes: {{comment.likes_count}}</li>
-<form action="{% url 'comment-like' comment.id %}" method="POST">
-  {% csrf_token %}
-  <button type="submit">
-    {% if comment.id in liked_comment %}
-      Unlike
-    {% else %}
-      Like
-    {% endif%}
-  </button>
-</form>
-<form action="{% url 'reply' post.id comment.id%}" method="GET">
-  {% csrf_token %}
-  <button type="submit">Reply</button>
-</form>
-{% if request.user == comment.user %}
-  <a href="{% url 'comment-update' post.id comment.id %}">Edit</a>
-  <a href="{% url 'comment-delete' post.id comment.id %}">Delete</a>
-{% endif %}
-{% endif %}
-<br>
-{% if comment.get_replies %}
-  <b>Replies:</b>
-{% for reply in comment.get_replies %}
-    <div style="margin-left: 2em;">
-      <p><a href="{% url 'external-user-profile' comment.user %}">{{reply.user.username}}</a>: {{reply.text}}<br>
-      <a href="{% url 'comment-like' reply.id%}">
-        {% if reply.id in liked_comment %}
-          Unlike
+<div class="container">
+  
+<!-- POST -->
+  <div class="card w-100 shadow-xss rounded-xxl border-0 p-4 mb-3">
+    <div class="card-body p-0 d-flex">
+      <figure class="avatar me-3">
+        {% if post.owner.profile.profile_picture %}
+          <img src="{{ post.owner.profile.profile_picture.url }}"
+            class="shadow-sm rounded-circle img-45"
+            alt="{{ user.username }} Profile Picture" 
+            width="26" height="26">
         {% else %}
-          Like
-        {% endif%}
-      </a> - Likes: {{reply.likes_count}}<br>
-      {{reply.posted_date|timesince}} ago
-      {% if request.user == reply.user %}
-        <a href="{% url 'comment-update' post.id reply.id %}">Edit</a>
-        <a href="{% url 'comment-delete' post.id reply.id %}">Delete</a>
-      {% endif %}
-      
-      </p>
+          <img src="{% static 'blog/default.jpg' %}"
+            class="shadow-sm rounded-circle img-45"
+            alt="{{ user.username }}" 
+            width="26px" height="26px">
+        {% endif %}
+      </figure>
+      <h4 class="fw-700 text-grey-900 font-xsss mt-1">
+        <a class="text-dark" href="{% url 'external-user-profile' post.owner.username %}">
+          {{post.owner}}
+        </a>
+        <span class="d-block font-xssss fw-500 mt-1 lh-3 text-grey-500">
+          {{ post.posted_date|timesince }} ago
+        </span>
+      </h4>
     </div>
-{% endfor %}
-{% endif %}
-<hr>
-{% endfor %}
+    {% if post.img %}
+      <div class="card-body p-0 mb-3 rounded-3 overflow-hidden">
+        <img src="{{post.img.url}}" 
+          alt="{{post.owner}}" 
+          class="float-right w-100" 
+          style="max-height:700px;">
+      </div>
+    {% endif %}
+    <div class="card-body p-0 me-lg-5">
+        <p class="fw-500 lh-26 font-xsss w-100 mb-2">
+          <a class="text-dark" href="{% url 'external-user-profile' post.owner.username %}">
+            <span class="fw-700">
+              {{post.owner}}
+            </span>
+          </a>
+          {{post.description}}
+        </p>
+    </div>
+    <div class="card-body d-flex p-0 align-items-center">
+      <a href="{% url 'post-like' post.pk%}" class="fw-600 
+        text-grey-900 text-dark lh-26 font-xssss">
+        {% if post.id in liked_post %}
+          <i class="bi bi-heart-fill color-red me-1 btn-round-sm font-lg"></i> 
+        {% else %}
+          <i class="bi bi-heart text-black me-1 btn-round-sm font-lg"></i> 
+        {% endif%}
+      </a>
+      <span class="font-xssss">{{ post.likes_count }} Like</span>
+    </div>
+  </div>
+  <!-- END POST -->
+  
+  <!-- COMMENTS -->
+  <div class="card w-100 shadow-xss rounded-xxl border-0 p-4 my-3">
+    <h2 class="mb-4 pb-2 border-bottom border-1 border-dark">Comments</h2>
+    <div class="card-body p-0">
+      {% for comment in comments %}
+        {% if not comment.parent_comment %}
+          <div class="d-flex flex-column mb-3">
+            <div class="d-flex flex-row">
+              <figure class="avatar me-3">
+                {% if comment.user.profile.profile_picture %}
+                  <img src="{{ comment.user.profile.profile_picture.url }}"
+                    class="shadow-sm rounded-circle img-45"
+                    alt="{{ user.username }} Profile Picture" 
+                    width="26" height="26">
+                {% else %}
+                  <img src="{% static 'blog/default.jpg' %}"
+                    class="shadow-sm rounded-circle img-45"
+                    alt="{{ user.username }}" 
+                    width="26px" height="26px">
+                {% endif %}
+              </figure>
+              
+              <div class="d-flex flex-column w-100">
+                <h4 class="fw-700 text-grey-900 font-xsss">
+                  <a class="text-dark" href="{% url 'external-user-profile' post.owner.username %}">
+                    {{comment.user.username}}
+                  </a>
+                  <span class="font-xssss fw-500 mt-1 lh-3 text-grey-500">
+                    - {{ comment.posted_date|timesince }} ago
+                  </span>
+                </h4>
+                <span class="w-100 mb-1">
+                  {{ comment.text }}
+                </span>
+                
+                <div class="d-flex">
+                  <form action="{% url 'reply' post.id comment.id%}" method="GET" 
+                    class="form-container me-2 d-flex align-items-center">
+                    {% csrf_token %}
+                    <button class="m-0 p-0 btn text-success" type="submit">Reply</button>
+                  </form>
+                  {% if request.user == comment.user %}
+                    <a href="{% url 'comment-update' post.id comment.id %}" 
+                      class="me-2 p-0 btn text-primary">
+                      Edit
+                    </a>
+                    <a href="{% url 'comment-delete' post.id comment.id %}" 
+                      class="me-2 p-0 btn text-danger">
+                      Delete
+                    </a>
+                  {% endif %}
+                </div>
+              </div>
+              
+              <div class="d-flex flex-column justify-content-center align-items-center">
+                <a href="{% url 'comment-like' comment.id %}" class="d-flex align-items-center fw-600 
+                  text-grey-900 lh-26 font-xssss">
+                  {% if comment.id in liked_comment %}
+                    <i class="bi bi-heart-fill color-red btn-round-sm font-lg"></i> 
+                  {% else %}
+                    <i class="bi bi-heart text-black btn-round-sm font-lg"></i> 
+                  {% endif%}
+                </a>
+                <span class="font-xssss">{{ comment.likes_count }}</span>
+              </div>
+            </div>
+            
+            <!-- REPLIES -->
+            <div class="mt-3 ms-6">
+              {% if comment.get_replies %}
+                {% for reply in comment.get_replies %}
+                  <div class="">
+                    <div class="d-flex mb-4">
+                      <figure class="avatar me-3">
+                        {% if reply.user.profile.profile_picture %}
+                          <img src="{{ reply.user.profile.profile_picture.url }}"
+                            class="shadow-sm rounded-circle img-45"
+                            alt="{{ reply.user.username }} Profile Picture" 
+                            width="26" height="26">
+                        {% else %}
+                          <img src="{% static 'blog/default.jpg' %}"
+                            class="shadow-sm rounded-circle img-45"
+                            alt="{{ reply.user.username }}" 
+                            width="26px" height="26px">
+                        {% endif %}
+                      </figure>
+
+                      <div class="d-flex flex-column w-100">
+                        <h4 class="fw-700 text-grey-900 font-xsss">
+                          <a 
+                            href="{% url 'external-user-profile' reply.user %}"
+                            class="text-dark">
+                            {{reply.user.username}}
+                          </a>
+                          <span class="font-xssss fw-500 mt-1 lh-3 text-grey-500">
+                            - {{ reply.posted_date|timesince }} ago
+                          </span>
+                        </h4>
+                        <span class="w-100 mb-1">
+                          {{ reply.text }}
+                        </span>
+
+                        <div class="d-flex">
+                          {% if request.user == reply.user %}
+                            <a href="{% url 'comment-update' post.id reply.id %}" 
+                              class="me-2 p-0 btn text-primary">
+                              Edit
+                            </a>
+                            <a href="{% url 'comment-delete' post.id reply.id %}" 
+                              class="me-2 p-0 btn text-danger">
+                              Delete
+                            </a>
+                          {% endif %}
+                        </div>
+                      </div>
+
+                      <div class="d-flex flex-column justify-content-center align-items-center">
+                        <a href="{% url 'comment-like' reply.id %}" 
+                          class="d-flex align-items-center fw-600 
+                          text-grey-900 lh-26 font-xssss">
+                          {% if reply.id in liked_comment %}
+                            <i class="bi bi-heart-fill color-red btn-round-sm font-lg"></i> 
+                          {% else %}
+                            <i class="bi bi-heart text-black btn-round-sm font-lg"></i> 
+                          {% endif%}
+                        </a>
+                        <span class="font-xssss">{{ reply.likes_count }}</span>
+                      </div>
+                    </div>
+                  </div>
+                {% endfor %}
+              {% endif %}
+            </div>
+            <!-- END REPLIES -->
+          </div>
+        {% endif %}
+      {% endfor %}
+
+    <!-- ADD COMMENT -->
+      <div class="w-100 p-3 sticky-bottom rounded-xxl bg-greylight">
+        <form action="{% url 'comments' post.id %}" 
+          method="POST"
+          class="d-flex flex-row align-items-center mt-2">
+          {% csrf_token %}
+          <span class="me-1 fw-700">
+            {{request.user.username}}
+          </span>
+          <textarea 
+            type="text" 
+            name="text" 
+            rows="1" 
+            class="form-control me-1"
+            style="resize:none;"></textarea>
+          <button type="submit"
+            class="btn btn-success">
+            Post
+          </button>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
 {% endblock %}
