--- a/blog/templates/blog/post_form.html
+++ b/blog/templates/blog/post_form.html
@@ -58,7 +58,7 @@
   </div>
 </div>
 
-<script>
+<script type="module">
   const imageInput = document.getElementById('imageInput');
   const previewContainer = document.getElementById('previewContainer');
   const imagePreview = document.getElementById('imagePreview');
