--- a/blog/templates/blog/_base.html
+++ b/blog/templates/blog/_base.html
@@ -12,39 +12,45 @@
     <link rel="stylesheet" type="text/css" href="{% static 'blog/css/styles.css' %}">
   </head>
   <body>
-  {% if messages %}
-        {% for message in messages %}
-            {% if message.tags == 'error' and "You cannot search for '/'." in message.message or message.tags == 'error' and "You cannot search for nothing." in message.message %}
-                <div class="modal fade"
-                  id="errorModal" 
-                  tabindex="-1" 
-                  aria-labelledby="errorModalLabel" 
-                  aria-hidden="true">
-                  <div class="modal-dialog">
-                    <div class="modal-content">
-                      <div class="modal-header">
-                        <h5 class="modal-title" id="errorModalLabel">Error</h5>
-                        <button type="button" 
-                          class="btn-close" 
-                          data-bs-dismiss="modal" 
-                          aria-label="Close">
-                        </button>
+    
+    {% if messages %}
+      {% for message in messages %}
+          {% if message.tags == 'error' and "You cannot search for '/'." in message.message or message.tags == 'error' and "You cannot search for nothing." in message.message %}
+            <div class="modal fade"
+              id="errorModal" 
+              tabindex="-1" 
+              aria-labelledby="errorModalLabel" 
+              data-bs-backdrop="static"
+              data-bs-keyboard="false"
+              aria-hidden="true">
+              <div class="modal-dialog">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h5 class="modal-title" id="errorModalLabel">Error</h5>
+                    <button type="button" 
+                      class="btn-close" 
+                      data-bs-dismiss="modal" 
+                      aria-label="Close">
+                    </button>
+                  </div>
+                  <div class="modal-body">
+                    {% for message in messages %}
+                      <div class="alert alert-danger">
+                        <strong>{{ message }}</strong>
                       </div>
-                      <div class="modal-body">
-                        {% for message in messages %}
-                          <div class="alert alert-danger">
-                            <strong>{{ message }}</strong>
-                          </div>
-                        {% endfor %}
-                      </div>
-                      <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                      </div>
-                    </div>
+                    {% endfor %}
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" 
+                      id="goBack"
+                      class="btn btn-secondary" 
+                      data-bs-dismiss="modal">Close</button>
                   </div>
                 </div>
-            {% endif %}    
-        {% endfor %}
+              </div>
+            </div>
+          {% endif %}    
+      {% endfor %}
     {% endif %}
     <header class="sticky-top">
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -147,20 +153,22 @@
         </div>
       </nav>
     </header>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
+    </script>
     {% block content %}
     {% endblock %}
     <script>
       document.addEventListener("DOMContentLoaded", function() {
-          var modalShown = false;
-          var hasMessages = "{{ messages|length|yesno:'true,false' }}";
+        var modalShown = false;
+        var hasMessages = "{{ messages|length|yesno:'true,false' }}";
 
-          if (hasMessages === "true" && !modalShown) {
-              var myModal = new bootstrap.Modal(document.getElementById('errorModal'));
-              myModal.show();
-              modalShown = true;
-          }
+        if (hasMessages === "true" && !modalShown) {
+          var myModal = new bootstrap.Modal(document.getElementById('errorModal'));
+          myModal.show();
+          modalShown = true;
+        }
       });
     </script>
+    <script type="module" src="{% static 'blog//js/main.js' %}"></script>
   </body>
 </html>
