--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -4,13 +4,16 @@
 <div class="container mt-3">
   <div class="card w-100 shadow-xss rounded-xxl border-0 ps-4 pt-4 pe-4 pb-3 mb-3">
     <form action="{% url 'post-create'%}" method='POST' class="form-container">
-      <div class="card-body p-0">
+      <div class="card-body p-0 d-flex flex-row justify-content-between">
         {% csrf_token %}
-        <button type="submit" 
-          class=" font-xssss fw-600 text-grey-500 card-body p-0 d-flex 
+        <span class=" font-xssss fw-600 text-grey-500 p-0 d-flex 
           align-items-center bg-transparent border-0">
-          <i class="btn-round-sm font-xs text-primary bi bi-pencil me-2 bg-greylight"></i>
+          <i class="bi bi-pencil btn-round-sm font-sm text-primary me-2 bg-greylight"></i>
           Quick Text
+        </span>
+        <button type="submit"
+          class="btn p-1">
+          <i class="bi bi-send-fill btn-round-sm font-md text-primary"></i>
         </button>
       </div>
       <div class="card-body p-0 mt-3 position-relative">
@@ -50,7 +53,7 @@
             width="26px" height="26px">
         {% endif %}
       </figure>
-      <h4 class="fw-700 text-grey-900 font-xssss mt-1">
+      <h4 class="fw-700 text-grey-900 font-xsss mt-1">
         <a class="text-dark" href="{% url 'external-user-profile' post.owner.username %}">
           {{post.owner}}
         </a>
@@ -77,7 +80,6 @@
             </strong>
           </a>
           {{post.description}}
-          <!-- <a href="#" class="fw-600 text-primary ms-2">See more</a> -->
         </p>
     </div>
     
