--- a/blog/templates/blog/post_comments_view.html
+++ b/blog/templates/blog/post_comments_view.html
@@ -1,7 +1,45 @@
 {% extends 'blog/_base.html' %}
 {% load static %}
 {% block content %}
-<div class="container">
+<div class="modal fade"
+  id="deleteModal" 
+  tabindex="-1" 
+  aria-labelledby="deleteModalLabel" 
+  aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="deleteModalLabel">Error</h5>
+        <button type="button" 
+          class="btn-close" 
+          data-bs-dismiss="modal" 
+          aria-label="Close">
+        </button>
+      </div>
+      <div class="modal-body">
+        <div class="alert alert-warning">
+          <strong>Are you sure that you want to delete the comment?</strong>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <form id="delete-form"
+          action="#" 
+          method="POST">
+          {% csrf_token %}
+          <button type="submit"
+            class="btn btn-danger">
+            Delete
+          </button>
+        </form>
+
+        <button type="button" 
+          class="btn btn-secondary" 
+          data-bs-dismiss="modal">Cancel</button>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="container mt-1">
   
 <!-- POST -->
   <div class="card w-100 shadow-xss rounded-xxl border-0 p-4 mb-3">
@@ -62,8 +100,21 @@
   
   <!-- COMMENTS -->
   <div class="card w-100 shadow-xss rounded-xxl border-0 p-4 my-3">
-    <h2 class="mb-4 pb-2 border-bottom border-1 border-dark">Comments</h2>
+    <div class="d-flex align-items-center mb-3 mb-4 pb-2 border-bottom border-1 border-dark">
+      <a type="button"
+        class="btn p-1 me-2 rounded-circle bg-greylight shadow-sm"
+        href="{% url 'home' %}">
+        <i class="bi bi-arrow-left"></i>
+      </a>
+      <h2 class="m-0">Comments</h2>
+    </div>
     <div class="card-body p-0">
+      {% if not comments %}
+      <div class="mb-3">
+        <h2 class="text-center">No Comments Yet</h2>
+        <p class="text-center text-grey-500">Leave a comment below</p>
+      </div>
+      {% endif %}
       {% for comment in comments %}
         {% if not comment.parent_comment %}
           <div class="d-flex flex-column mb-3">
@@ -84,7 +135,8 @@
               
               <div class="d-flex flex-column w-100">
                 <h4 class="fw-700 text-grey-900 font-xsss">
-                  <a class="text-dark" href="{% url 'external-user-profile' post.owner.username %}">
+                  <a class="text-dark" 
+                    href="{% url 'external-user-profile' post.owner.username %}">
                     {{comment.user.username}}
                   </a>
                   <span class="font-xssss fw-500 mt-1 lh-3 text-grey-500">
@@ -99,23 +151,26 @@
                   <form action="{% url 'reply' post.id comment.id%}" method="GET" 
                     class="form-container me-2 d-flex align-items-center">
                     {% csrf_token %}
-                    <button class="m-0 p-0 btn text-success" type="submit">Reply</button>
+                    <button class="m-0 p-0 btn text-success"
+                      type="submit">Reply</button>
                   </form>
-                  {% if request.user == comment.user %}
-                    <a href="{% url 'comment-update' post.id comment.id %}" 
-                      class="me-2 p-0 btn text-primary">
-                      Edit
-                    </a>
-                    <a href="{% url 'comment-delete' post.id comment.id %}" 
-                      class="me-2 p-0 btn text-danger">
-                      Delete
-                    </a>
+                  {% if request.user == comment.user or request.user == comment.post.owner%}
+                  <button 
+                    type="button"
+                    class="me-2 p-0 btn text-danger"
+                    data-bs-toggle="modal" 
+                    data-bs-target="#deleteModal"
+                    data-comment-id="{{ comment.id }}">
+                    Delete
+                  </button>
                   {% endif %}
                 </div>
               </div>
               
-              <div class="d-flex flex-column justify-content-center align-items-center">
-                <a href="{% url 'comment-like' comment.id %}" class="d-flex align-items-center fw-600 
+              <div class="d-flex flex-column justify-content-center 
+                align-items-center">
+                <a href="{% url 'comment-like' comment.id %}" 
+                  class="d-flex align-items-center fw-600 
                   text-grey-900 lh-26 font-xssss">
                   {% if comment.id in liked_comment %}
                     <i class="bi bi-heart-fill color-red btn-round-sm font-lg"></i> 
@@ -131,63 +186,62 @@
             <div class="mt-3 ms-6">
               {% if comment.get_replies %}
                 {% for reply in comment.get_replies %}
-                  <div class="">
-                    <div class="d-flex mb-4">
-                      <figure class="avatar me-3">
-                        {% if reply.user.profile.profile_picture %}
-                          <img src="{{ reply.user.profile.profile_picture.url }}"
-                            class="shadow-sm rounded-circle img-45"
-                            alt="{{ reply.user.username }} Profile Picture" 
-                            width="26" height="26">
-                        {% else %}
-                          <img src="{% static 'blog/default.jpg' %}"
-                            class="shadow-sm rounded-circle img-45"
-                            alt="{{ reply.user.username }}" 
-                            width="26px" height="26px">
-                        {% endif %}
-                      </figure>
+                  <div class="d-flex mb-3">
+                    <figure class="avatar me-3">
+                      {% if reply.user.profile.profile_picture %}
+                        <img src="{{ reply.user.profile.profile_picture.url }}"
+                          class="shadow-sm rounded-circle img-45"
+                          alt="{{ reply.user.username }} Profile Picture" 
+                          width="26" height="26">
+                      {% else %}
+                        <img src="{% static 'blog/default.jpg' %}"
+                          class="shadow-sm rounded-circle img-45"
+                          alt="{{ reply.user.username }}" 
+                          width="26px" height="26px">
+                      {% endif %}
+                    </figure>
 
-                      <div class="d-flex flex-column w-100">
-                        <h4 class="fw-700 text-grey-900 font-xsss">
-                          <a 
-                            href="{% url 'external-user-profile' reply.user %}"
-                            class="text-dark">
-                            {{reply.user.username}}
-                          </a>
-                          <span class="font-xssss fw-500 mt-1 lh-3 text-grey-500">
-                            - {{ reply.posted_date|timesince }} ago
-                          </span>
-                        </h4>
-                        <span class="w-100 mb-1">
-                          {{ reply.text }}
-                        </span>
-
-                        <div class="d-flex">
-                          {% if request.user == reply.user %}
-                            <a href="{% url 'comment-update' post.id reply.id %}" 
-                              class="me-2 p-0 btn text-primary">
-                              Edit
-                            </a>
-                            <a href="{% url 'comment-delete' post.id reply.id %}" 
-                              class="me-2 p-0 btn text-danger">
-                              Delete
-                            </a>
-                          {% endif %}
-                        </div>
-                      </div>
-
-                      <div class="d-flex flex-column justify-content-center align-items-center">
-                        <a href="{% url 'comment-like' reply.id %}" 
-                          class="d-flex align-items-center fw-600 
-                          text-grey-900 lh-26 font-xssss">
-                          {% if reply.id in liked_comment %}
-                            <i class="bi bi-heart-fill color-red btn-round-sm font-lg"></i> 
-                          {% else %}
-                            <i class="bi bi-heart text-black btn-round-sm font-lg"></i> 
-                          {% endif%}
+                    <div class="d-flex flex-column w-100">
+                      <h4 class="fw-700 text-grey-900 font-xsss">
+                        <a 
+                          href="{% url 'external-user-profile' reply.user %}"
+                          class="text-dark">
+                          {{reply.user.username}}
                         </a>
-                        <span class="font-xssss">{{ reply.likes_count }}</span>
+                        <span class="font-xssss fw-500 mt-1 lh-3 text-grey-500">
+                          - {{ reply.posted_date|timesince }} ago
+                        </span>
+                      </h4>
+                      <span class="w-100 mb-1">
+                        {{ reply.text }}
+                      </span>
+
+                      <div class="d-flex">
+                        {% if request.user == reply.user %}
+                          <button 
+                            type="button"
+                            class="me-2 p-0 btn text-danger"
+                            data-bs-toggle="modal" 
+                            data-bs-target="#deleteModal"
+                            data-comment-id="{{ reply.id }}">
+                            Delete
+                          </button>
+                        {% endif %}
                       </div>
+                    </div>
+
+                    <div class="d-flex flex-column justify-content-center 
+                      align-items-center">
+                      <a href="{% url 'comment-like' reply.id %}" 
+                        class="d-flex align-items-center fw-600 
+                        text-grey-900 lh-26 font-xssss">
+                        {% if reply.id in liked_comment %}
+                          <i class="bi bi-heart-fill color-red btn-round-sm font-lg"></i> 
+                        {% else %}
+                          <i class="bi bi-heart text-black btn-round-sm font-lg"></i> 
+                        {% endif%}
+                      </a>
+                      <span class="font-xssss">{{ reply.likes_count }}</span>
                     </div>
                   </div>
                 {% endfor %}
@@ -199,7 +253,7 @@
       {% endfor %}
 
     <!-- ADD COMMENT -->
-      <div class="w-100 p-3 sticky-bottom rounded-xxl bg-greylight">
+      <div class="w-100 p-3 sticky-bottom rounded-xxl bg-greylight bottom-5">
         <form action="{% url 'comments' post.id %}" 
           method="POST"
           class="d-flex flex-row align-items-center mt-2">
@@ -222,4 +276,19 @@
     </div>
   </div>
 </div>
+<script type="module">
+  document.addEventListener("DOMContentLoaded", function() {
+    // Function to update the delete link in the modal
+    var deleteModal = document.getElementById('deleteModal');
+    deleteModal.addEventListener('show.bs.modal', function (event) {
+      var triggerElement = event.relatedTarget; // The `a` tag that triggered the modal
+      var commentId = triggerElement.getAttribute('data-comment-id'); // Extract comment ID
+
+      // Update the modal's delete link with the comment ID
+      var deleteForm = deleteModal.querySelector('#delete-form');
+      deleteForm.action = "{% url 'comment-delete' post.id 0 %}".replace('/0/', '/' + commentId + '/');
+      console.log('href', deleteLink.href);
+    });
+  });
+</script>
 {% endblock %}
