Commit 8.0: Stylish Profile Card

--- a/blog/templates/blog/add_reply_form.html
+++ b/blog/templates/blog/add_reply_form.html
@@ -37,7 +37,7 @@
                 - {{ comment.posted_date|timesince }} ago
               </span>
             </h4>
-            <span class="w-100 mb-1">
+            <span class="w-100 mb-1 text-wrap">
               {{ comment.text }}
             </span>
           </div>
