--- a/blog/static/blog/css/styles.css
+++ b/blog/static/blog/css/styles.css
@@ -40,6 +40,10 @@ a {
   font-weight: 700 !important;
 }
 
+.text-wrap {
+  word-break: break-word;
+}
+
 .text-grey-500 {
   color: #adb5bd !important;
 }
@@ -74,6 +78,10 @@ a {
 
 .font-lg {
   font-size: 25px !important;
+}
+
+.font-xl {
+  font-size: 30px !important;
 }
 
 .font-xxxl {
@@ -150,4 +158,34 @@ a {
   line-height: 20px;
   width: 25px; /* Control the size of the circle */
   height: 25px;
+}
+
+/* MEDIA QUERY */
+
+@media (min-width: 768px) {
+  #profile_picture {
+    width: 130px;
+    height:130px;
+  }
+}
+
+@media (max-width: 767px) {
+  #profile-username {
+    font-size: 26px !important;
+  }
+}
+
+
+.see-more-container {
+  max-height: 1.5em;
+  overflow: hidden;
+  transition: max-height 0.3s ease;
+}
+
+.w-space-pwrap {
+  white-space: pre-wrap;
+}
+
+.see-more-container.expanded {
+  max-height: none;
 }
