--- a/blog/templates/blog/_base.html
+++ b/blog/templates/blog/_base.html
@@ -169,6 +169,6 @@
         }
       });
     </script>
-    <script type="module" src="{% static 'blog//js/main.js' %}"></script>
+    <script type="module" src="{% static 'blog/js/main.js' %}"></script>
   </body>
 </html>
