--- a/blog/templates/blog/dashboard.html
+++ b/blog/templates/blog/dashboard.html
@@ -2,23 +2,87 @@
 {% load static %}
 {% block content %}
 
-<h2>{{user.username}}</h2>
-<a href="{% url 'profile-followers' user.username %}">Followers</a>: {{followers.count}}<br>
-<a href="{% url 'profile-following' user.username %}">Following</a>: {{following.count}}<br>
-Posts: {{posts.count}}
-<form action="{% url 'profile-update' user.profile.pk %}" method="GET">
-  <button type="submit">Edit Profile</button>
-</form>
-  {% if user.profile.profile_picture %}
-      <img src="{{ user.profile.profile_picture.url }}"
-        alt="{{ user.username }}" width="200px" height="200px">
-  {% else %}
-      <img src="{% static 'blog/default.jpg' %}"
-        alt="{{ user.username }}" width="200px" height="200px">
-  {% endif %}
-  <p><strong>{{user.first_name}} {{user.last_name}}</strong></p>
-  <p>Bio: {{user.profile.bio}}<br>
-  <a href="{% url 'post-create' %}">Add New Post</a>
+<div class="container">
+  <div class="card w-100 shadow-xss rounded-xxl border-0 px-lg-5 p-3 my-3">
+    <div class="card-body d-flex flex-column justify-content-center position-relative">
+      <div class="d-flex flex-column flex-md-row align-items-md-start align-items-center">
+        <span class="d-flex d-md-none font-lg fw-600 mb-2">{{user.username}}</span>
+        <figure class="avatar mb-1 mb-md-3">
+          {% if user.profile.profile_picture %}
+            <img src="{{ user.profile.profile_picture.url }}"
+              id="profile_picture"
+              class="shadow-sm rounded-circle"
+              alt="{{ user.username }} Profile Picture"
+              width="90" height="90">
+          {% else %}
+            <img src="{% static 'blog/default.jpg' %}"
+              id="profile_picture"
+              class="shadow-sm rounded-circle"
+              alt="{{ user.username }}"
+              width="90" height="90">
+          {% endif %}
+        </figure>
+        <div class="position-absolute top-0 end-0 d-md-none">
+          <div class="d-flex flex-column align-items-center">
+            <a class="text-dark" href="{% url 'profile-update' user.profile.pk %}" method="GET">
+              <i class="bi bi-gear-fill font-lg text-dark"></i>
+            </a>
+            <span id="edit-profile-text" class="font-xssss">Edit Profile</span>
+          </div>
+        </div>
+        <div class="d-flex flex-column w-100 ms-md-2">
+          <div class="d-flex flex-column flex-md-row align-items-center justify-content-between m-2">
+            <span class="d-none d-md-flex font-lg fw-600 mb-2">{{user.username}}</span>
+            <span class="d-flex d-md-none mb-1 font-md">{{user.first_name}} {{user.last_name}}</span>
+            <div class="d-flex flex-row justify-content-center mx-2">
+              <div class="d-flex flex-row align-items-center me-2 p-1 bg-greylight rounded">
+                <span class="fw-600 me-1">
+                  {{posts.count}}
+                </span>
+                <span>
+                  Posts
+                </span>
+              </div>
+              <div class="d-flex flex-row align-items-center me-2 p-1 bg-greylight rounded">
+                <a class="text-dark" href="{% url 'profile-followers' user.username %}">
+                  <span class="fw-600">
+                    {{followers.count}}
+                  </span>
+                  Followers
+                </a>
+              </div>
+              <div class="d-flex flex-row align-items-center me-2 p-1 bg-greylight rounded">
+                <a class="text-dark" href="{% url 'profile-following' user.username %}">
+                  <span class="fw-600">
+                    {{following.count}}
+                  </span>
+                  Following
+                </a>
+              </div>
+            </div>
+            <div class="d-none d-md-flex flex-md-column align-items-md-center">
+              <a class="text-dark" href="{% url 'profile-update' user.profile.pk %}" method="GET">
+                <i class="bi bi-gear-fill font-lg text-dark"></i>
+              </a>
+              <span id="edit-profile-text" class="font-xssss">Edit Profile</span>
+            </div>
+          </div>
+          <div class="d-flex align-items-center m-2">
+            <div class="d-flex flex-column">
+              <span class="fw-600 d-none d-md-block">{{user.first_name}} {{user.last_name}}</span>
+              {% if user.profile.bio%}
+              <div class="see-more-container">
+                <span class="d-block w-space-pwrap">Bio: {{ user.profile.bio|linebreaksbr }}</span>
+              </div>
+              {% endif %}
+              <span class="btn btn-link bg-trasnparent border-0 cursor-pointer text-primary p-0 text-decoration-none text-start" 
+                id="see-more-btn">See More</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
   {% if posts %}
     <p>These are your posts</p>
     <hr>
@@ -56,4 +120,7 @@ Posts: {{posts.count}}
     <hr>
     {% endfor %}
   </ul>
+
+
+</div>
 {% endblock %}
