--- a/blog/templates/blog/post_comments_view.html
+++ b/blog/templates/blog/post_comments_view.html
@@ -143,7 +143,7 @@
                     - {{ comment.posted_date|timesince }} ago
                   </span>
                 </h4>
-                <span class="w-100 mb-1">
+                <span class="w-100 mb-1 text-wrap">
                   {{ comment.text }}
                 </span>
                 
@@ -212,7 +212,7 @@
                           - {{ reply.posted_date|timesince }} ago
                         </span>
                       </h4>
-                      <span class="w-100 mb-1">
+                      <span class="w-100 mb-1 text-wrap">
                         {{ reply.text }}
                       </span>
 
