--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -72,15 +72,15 @@
       </div>
     {% endif %}
     
-    <div class="card-body p-0 me-lg-5">
-        <p class="fw-500 lh-26 font-xsss w-100 mb-2">
-          <a class="text-dark" href="{% url 'external-user-profile' post.owner.username %}">
-            <strong>
-              {{post.owner}}
-            </strong>
-          </a>
-          {{post.description}}
-        </p>
+    <div class="card-body p-0 me-lg-5 d-flex flex-column">
+      <div class="see-more-container">
+        <!-- DO NOT MODIFY OR INDENT THIS PART OF THE CODE -->
+        <span class="fw-500 font-xss mb-2 text-description"><a class="text-dark fw-700 me-1" href="{% url 'external-user-profile' post.owner.username %}">{{ post.owner }}</a>{{post.description|linebreaksbr }}</span>
+        <!--  -->
+      </div>
+      <span class="see-more-btn btn btn-link bg-transparent border-0 cursor-pointer text-primary p-0 text-decoration-none text-start d-none">
+        Show More
+      </span>
     </div>
     
     <div class="card-body d-flex p-0">
