--- a/blog/templates/blog/post_comments_view.html
+++ b/blog/templates/blog/post_comments_view.html
@@ -144,7 +144,7 @@
                   </span>
                 </h4>
                 <span class="w-100 mb-1 text-wrap">
-                  {{ comment.text }}
+                  {{ comment.text|linebreaksbr }}
                 </span>
                 
                 <div class="d-flex">
@@ -213,7 +213,7 @@
                         </span>
                       </h4>
                       <span class="w-100 mb-1 text-wrap">
-                        {{ reply.text }}
+                        {{ reply.text|linebreaksbr }}
                       </span>
 
                       <div class="d-flex">
