--- a/blog/templates/blog/dashboard.html
+++ b/blog/templates/blog/dashboard.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <div class="container">
-  <div class="card w-100 shadow-xss rounded-xxl border-0 px-lg-5 p-3 my-3">
+  <div class="card w-100 shadow-xss rounded-xxl border-0 px-lg-4 p-2 mt-3 mb-1">
     <div class="card-body d-flex flex-column justify-content-center position-relative">
       <div class="d-flex flex-column flex-md-row align-items-md-start align-items-center">
         <span class="d-flex d-md-none font-lg fw-600 mb-2">{{user.username}}</span>
@@ -74,7 +74,7 @@
               <div class="see-more-container">
                 <span class="d-block text-description">Bio: {{ user.profile.bio|linebreaksbr }}</span>
               </div>
-              <span class="see-more-btn btn btn-link bg-trasnparent border-0 cursor-pointer text-primary p-0 text-decoration-none text-start mt-1 d-none">Show More</span>
+              <span class="see-more-btn btn btn-link bg-trasnparent border-0 cursor-pointer text-primary p-0 text-decoration-none text-start mt-1 text-grey-500 d-none">Show More</span>
               {% endif %}
             </div>
           </div>
@@ -82,44 +82,38 @@
       </div>
     </div>
   </div>
-  {% if posts %}
-    <p>These are your posts</p>
-    <hr>
-  {% else %}
-    <p>You haven't post anything yet</p>
-  {% endif %}
-  <ul>
-    {% for post in posts %}
-    <li>Author: <a href="{% url 'dashboard' %}">{{user.username}}</a></li>
-    <li>Title: {{post.title}} </li>
-    {% if post.img %}
-      <img src="{{post.img.url}}" alt="{{post.title}}" width="200px" height="200px">
-    {% else %}
-      <li>No Image Available</li>
-    {% endif %}
-    <li>Likes: {{ post.likes_count }}</li>
-    <li>{{post.posted_date|timesince}} ago</li>
-    <li>Description: {{post.description}}</li>
-    <form class="form-container" action="{% url 'post-like' post.pk%}" method="POST">
-      {% csrf_token %}
-      <button type="submit">
-        {% if post.id in liked %}
-          Unlike
+  <div class="card w-100 shadow-xss rounded-xxl border-0 px-lg-4 p-2 my-2">
+    <div class="card-body d-flex flex-column justify-content-center position-relative">
+      <div class="text-center mb-1">
+        {% if posts %}
+            <span class="font-lg">Posts</span>
         {% else %}
-          Like
-        {% endif%}
-      </button>
-    </form>
-    <form class="form-container" action="{% url 'comments' post.id %}" method="GET">
-      {% csrf_token %}
-      <button type="submit">Comments</button>
-    </form>
-    <a href="{% url 'post-update' post.pk %}">Edit</a>
-    <a href="{% url 'post-delete' post.pk %}">Delete</a>
-    <hr>
-    {% endfor %}
-  </ul>
-
-
+            <span class="font-md">You haven't post anything yet</span>
+        {% endif %}
+          <hr class="mt-0">
+      </div>
+      <div class="container p-0">
+        <div class="row g-1 mb-1">
+          {% for post in posts %}
+            <div class="col-4">
+              <div class="ratio ratio-1x1">
+                {% if post.img %}
+                  <img class="img-fluid w-100 h-100" src="{{ post.img.url }}" alt="{{ post.title }}" style="object-fit: cover;">
+                {% else %}
+                  <div class="d-flex justify-content-center align-items-center h-100">
+                    <span>No Image Available</span>
+                  </div>
+                {% endif %}
+              </div>
+            </div>
+        
+            {% if forloop.counter|divisibleby:3 and not forloop.last %}
+              </div><div class="row g-1 mb-1">
+            {% endif %}
+          {% endfor %}
+        </div> 
+      </div>   
+    </div>
+  </div>
 </div>
 {% endblock %}
