--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -78,7 +78,7 @@
         <span class="fw-500 font-xss mb-2 text-description"><a class="text-dark fw-700 me-1" href="{% url 'external-user-profile' post.owner.username %}">{{ post.owner }}</a>{{post.description|linebreaksbr }}</span>
         <!--  -->
       </div>
-      <span class="see-more-btn btn btn-link bg-transparent border-0 cursor-pointer text-primary p-0 text-decoration-none text-start d-none">
+      <span class="see-more-btn btn btn-link bg-transparent border-0 cursor-pointer text-primary p-0 text-decoration-none text-start text-grey-500 d-none">
         Show More
       </span>
     </div>
