Commit 8.4: Dashboard Post/Text functionality and stylish

--- a/blog/static/blog/css/styles.css
+++ b/blog/static/blog/css/styles.css
@@ -25,6 +25,16 @@ a {
   height: 60px;
 }
 
+.border-bottom-dark {
+  border-bottom: 1px solid #343a40;
+  border-radius: 0;
+}
+
+.border-bottom-dark:hover,
+.border-bottom-dark:focus {
+  border-bottom: 1px solid #343a40;
+}
+
 .bottom-5 {
   bottom: 5px;
 }
