--- a/blog/templates/blog/dashboard.html
+++ b/blog/templates/blog/dashboard.html
@@ -83,27 +83,26 @@
     </div>
   </div>
   <div class="card w-100 shadow-xss rounded-xxl border-0 px-lg-4 p-2 my-2">
-    <div class="card-body d-flex flex-column justify-content-center position-relative">
+    <div class="card-body mb-3 d-flex flex-column justify-content-center position-relative">
       <div class="text-center mb-1">
-        {% if posts %}
-            <span class="font-lg">Posts</span>
-        {% else %}
-            <span class="font-md">You haven't post anything yet</span>
-        {% endif %}
-          <hr class="mt-0">
+        <button type="button" id="showPosts" class="btn font-lg b-0 border-bottom-dark">Posts</button>
+        <button type="button" id="showTexts" class="btn font-lg b-0">Texts</button>
+        <hr class="mt-0">
       </div>
-      <div class="container p-0">
+      <div id="postsContainer" class="container p-0">
         <div class="row g-1 mb-1">
-          {% for post in posts %}
+          {% for post in img_posts %}
             <div class="col-4">
               <div class="ratio ratio-1x1">
-                {% if post.img %}
-                  <img class="img-fluid w-100 h-100" src="{{ post.img.url }}" alt="{{ post.title }}" style="object-fit: cover;">
-                {% else %}
-                  <div class="d-flex justify-content-center align-items-center h-100">
-                    <span>No Image Available</span>
-                  </div>
-                {% endif %}
+                <a href="{% url 'comments' post.id %}">
+                  {% if post.img %}
+                    <img class="img-fluid w-100 h-100" src="{{ post.img.url }}" alt="{{ post.title }}" style="object-fit: cover;">
+                  {% else %}
+                    <div class="d-flex justify-content-center align-items-center h-100">
+                      <span>No Image Available</span>
+                    </div>
+                  {% endif %}
+                </a>
               </div>
             </div>
         
@@ -112,7 +111,72 @@
             {% endif %}
           {% endfor %}
         </div> 
-      </div>   
+      </div>
+      <div id="textsContainer" class="d-none">
+        {% for post in txt_posts %}
+        <div class="card w-100 rounded-xxl border-1 p-4 mb-3">
+          <div class="card-body p-0 d-flex">
+            <figure class="avatar me-3">
+              {% if post.owner.profile.profile_picture %}
+                <img src="{{ post.owner.profile.profile_picture.url }}"
+                  class="shadow-sm rounded-circle img-45"
+                  alt="{{ user.username }} Profile Picture" 
+                  width="26" height="26">
+              {% else %}
+                <img src="{% static 'blog/default.jpg' %}"
+                  class="shadow-sm rounded-circle img-45"
+                  alt="{{ user.username }}" 
+                  width="26px" height="26px">
+              {% endif %}
+            </figure>
+            <h4 class="fw-700 text-grey-900 font-xsss mt-1">
+              <a class="text-dark" href="{% url 'external-user-profile' post.owner.username %}">
+                {{post.owner}}
+              </a>
+              <span class="d-block font-xssss fw-500 mt-1 lh-3 text-grey-500 text-nowrap">
+                {{ post.posted_date|timesince }} ago
+              </span>
+            </h4>
+            <div class="w-100 d-flex justify-content-end">
+              <i class="bi bi-three-dots"></i>
+            </div>
+          </div>
+
+          <div class="card-body p-0 me-lg-5 d-flex flex-column">
+            <div class="see-more-container">
+              <!-- DO NOT MODIFY OR INDENT THIS PART OF THE CODE -->
+              <span class="fw-500 font-xss mb-2 text-description"><a class="text-dark fw-700 me-1" href="{% url 'external-user-profile' post.owner.username %}">{{ post.owner }}</a>{{post.description|linebreaksbr }}</span>
+              <!--  -->
+            </div>
+            <span class="see-more-btn btn btn-link bg-transparent border-0 cursor-pointer text-primary p-0 text-decoration-none text-start text-grey-500 d-none">
+              Show More
+            </span>
+          </div>
+
+          <div class="card-body d-flex p-0">
+            <a href="{% url 'post-like' post.pk%}" class="d-flex align-items-center fw-600 
+              text-grey-900 lh-26 font-xssss me-2">
+              {% if post.id in liked %}
+                <i class="bi bi-heart-fill color-red me-1 btn-round-sm font-lg"></i> 
+              {% else %}
+                <i class="bi bi-heart text-black me-1 btn-round-sm font-lg"></i> 
+              {% endif%}
+              {{ post.likes_count }} Like
+            </a>
+            <a href="{% url 'comments' post.id %}" class="d-flex align-items-center fw-600 
+              text-grey-900 lh-26 font-xssss">
+              <i class="bi bi-chat text-dark text-grey-900 btn-round-sm font-lg"></i>
+              <span>{{ post.comments_count }} Comments</span>
+            </a>
+            <a href="#" class="ms-auto d-flex align-items-center 
+              fw-600 text-grey-900 lh-26 font-xssss">
+              <i class="bi bi-share text-grey-900 text-dark btn-round-sm font-lg"></i>
+              <span>Share</span>
+            </a>
+          </div>
+        </div>
+        {% endfor %}
+      </div>
     </div>
   </div>
 </div>
