--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -75,7 +75,7 @@
     <div class="card-body p-0 me-lg-5 d-flex flex-column">
       <div class="see-more-container">
         <!-- DO NOT MODIFY OR INDENT THIS PART OF THE CODE -->
-        <span class="fw-500 font-xss mb-2 text-description"><a class="text-dark fw-700 me-1" href="{% url 'external-user-profile' post.owner.username %}">{{ post.owner }}</a>{{post.description|linebreaksbr }}</span>
+        <span class="font-xss mb-2 text-description"><a class="text-dark fw-700 me-1" href="{% url 'external-user-profile' post.owner.username %}">{{ post.owner }}</a>{{post.description|linebreaksbr }}</span>
         <!--  -->
       </div>
       <span class="see-more-btn btn btn-link bg-transparent border-0 cursor-pointer text-primary p-0 text-decoration-none text-start text-grey-500 d-none">
