--- a/blog/templates/blog/dashboard.html
+++ b/blog/templates/blog/dashboard.html
@@ -1,7 +1,9 @@
 {% extends 'blog/_base.html' %}
 {% load static %}
 {% block content %}
-
+<!-- MODAL -->
+{% include 'blog/modal_delete.html' %}
+<!-- ENDMODAL -->
 <div class="container">
   <div class="card w-100 shadow-xss rounded-xxl border-0 px-lg-4 p-2 mt-3 mb-1">
     <div class="card-body d-flex flex-column justify-content-center position-relative">
@@ -138,14 +140,33 @@
               </span>
             </h4>
             <div class="w-100 d-flex justify-content-end">
-              <i class="bi bi-three-dots"></i>
+              <div class="dropdown">
+                <a class="d-flex align-items-center" 
+                  href="#" role="button" data-bs-toggle="dropdown"
+                  aria-expanded="false">
+                  <i class="bi bi-three-dots text-dark font-sm"></i>
+                </a>
+                <ul class="dropdown-menu p-0">
+                  <a class="btn w-100 text-start text-success"
+                    href="{% url 'post-update' post.id %}">
+                    Edit Post
+                  </a>
+                  <hr class="m-0">
+                  <a class="btn w-100 text-start text-danger deletePost"
+                    data-bs-toggle="modal" 
+                    data-bs-target="#deleteModal"
+                    data-post-id="{{ post.id }}">
+                    Delete Post
+                  </a>
+                </ul>
+              </div>
             </div>
           </div>
 
           <div class="card-body p-0 me-lg-5 d-flex flex-column">
             <div class="see-more-container">
               <!-- DO NOT MODIFY OR INDENT THIS PART OF THE CODE -->
-              <span class="fw-500 font-xss mb-2 text-description"><a class="text-dark fw-700 me-1" href="{% url 'external-user-profile' post.owner.username %}">{{ post.owner }}</a>{{post.description|linebreaksbr }}</span>
+              <span class="font-xss mb-2 text-description"><a class="text-dark fw-700 me-1" href="{% url 'external-user-profile' post.owner.username %}">{{ post.owner }}</a>{{post.description|linebreaksbr }}</span>
               <!--  -->
             </div>
             <span class="see-more-btn btn btn-link bg-transparent border-0 cursor-pointer text-primary p-0 text-decoration-none text-start text-grey-500 d-none">
@@ -180,4 +201,23 @@
     </div>
   </div>
 </div>
+<script>
+  document.addEventListener("DOMContentLoaded", () => {
+    // Function to update the delete link in the modal
+    let deleteModal = document.getElementById('deleteModal');
+
+    deleteModal.addEventListener('show.bs.modal', (event) => {
+      const deleteText = document.getElementById('deleteText');
+      let triggerElement = event.relatedTarget;
+      if (triggerElement.classList.contains('deletePost')) {
+        let postId = triggerElement.getAttribute('data-post-id');
+        deleteText.textContent = 'Are you sure that you want to delete this post?';
+
+        // Update the modal's delete link with the comment ID
+        let deleteForm = deleteModal.querySelector('#delete-form');
+        deleteForm.action = "{% url 'post-delete' 0 %}".replace('/0/', '/' + postId + '/');
+      }
+    });
+  });
+</script>
 {% endblock %}
