--- a/blog/templates/blog/post_comments_view.html
+++ b/blog/templates/blog/post_comments_view.html
@@ -1,46 +1,10 @@
 {% extends 'blog/_base.html' %}
 {% load static %}
 {% block content %}
-<div class="modal fade"
-  id="deleteModal" 
-  tabindex="-1" 
-  aria-labelledby="deleteModalLabel" 
-  aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="deleteModalLabel">Error</h5>
-        <button type="button" 
-          class="btn-close" 
-          data-bs-dismiss="modal" 
-          aria-label="Close">
-        </button>
-      </div>
-      <div class="modal-body">
-        <div class="alert alert-warning">
-          <strong>Are you sure that you want to delete the comment?</strong>
-        </div>
-      </div>
-      <div class="modal-footer">
-        <form id="delete-form"
-          action="#" 
-          method="POST">
-          {% csrf_token %}
-          <button type="submit"
-            class="btn btn-danger">
-            Delete
-          </button>
-        </form>
-
-        <button type="button" 
-          class="btn btn-secondary" 
-          data-bs-dismiss="modal">Cancel</button>
-      </div>
-    </div>
-  </div>
-</div>
+<!-- MODAL -->
+{% include 'blog/modal_delete.html' %}
+<!-- ENDMODAL -->
 <div class="container mt-1">
-  
 <!-- POST -->
   <div class="card w-100 shadow-xss rounded-xxl border-0 p-4 mb-3">
     <div class="card-body p-0 d-flex">
@@ -61,13 +25,32 @@
         <a class="text-dark" href="{% url 'external-user-profile' post.owner.username %}">
           {{post.owner}}
         </a>
-        <span class="d-block font-xssss fw-500 mt-1 lh-3 text-grey-500">
+        <span class="d-block font-xssss fw-500 mt-1 lh-3 text-grey-500 text-nowrap">
           {{ post.posted_date|timesince }} ago
         </span>
       </h4>
       {% if request.user == post.owner %}
       <div class="w-100 d-flex justify-content-end">
-        <i class="bi bi-three-dots"></i>
+        <div class="dropdown">
+          <a class="d-flex align-items-center" 
+            href="#" role="button" data-bs-toggle="dropdown"
+            aria-expanded="false">
+            <i class="bi bi-three-dots text-dark font-sm"></i>
+          </a>
+          <ul class="dropdown-menu p-0">
+            <a class="btn w-100 text-start text-success"
+              href="{% url 'post-update' post.id %}">
+              Edit Post
+            </a>
+            <hr class="m-0">
+            <a class="btn w-100 text-start text-danger deletePost"
+              data-bs-toggle="modal" 
+              data-bs-target="#deleteModal"
+              data-post-id="{{ post.id }}">
+              Delete Post
+            </a>
+          </ul>
+        </div>
       </div>
       {% endif %}
     </div>
@@ -80,14 +63,7 @@
       </div>
     {% endif %}
     <div class="card-body p-0 me-lg-5">
-        <p class="fw-500 lh-26 font-xsss w-100 mb-2">
-          <a class="text-dark" href="{% url 'external-user-profile' post.owner.username %}">
-            <span class="fw-700">
-              {{post.owner}}
-            </span>
-          </a>
-          {{post.description}}
-        </p>
+      <span class="font-xss mb-2 text-description"><a class="text-dark fw-700 me-1" href="{% url 'external-user-profile' post.owner.username %}">{{ post.owner }}</a>{{post.description|linebreaksbr }}</span>
     </div>
     <div class="card-body d-flex p-0 align-items-center">
       <a href="{% url 'post-like' post.pk%}" class="fw-600 
@@ -169,14 +145,12 @@
                       type="submit">Reply</button>
                   </form>
                   {% if request.user == comment.user or request.user == comment.post.owner%}
-                  <button 
-                    type="button"
-                    class="me-2 p-0 btn text-danger"
+                  <a class="me-2 p-0 btn text-danger deleteComment"
                     data-bs-toggle="modal" 
                     data-bs-target="#deleteModal"
                     data-comment-id="{{ comment.id }}">
                     Delete
-                  </button>
+                  </a>
                   {% endif %}
                 </div>
               </div>
@@ -238,14 +212,12 @@
 
                       <div class="d-flex">
                         {% if request.user == reply.user %}
-                          <button 
-                            type="button"
-                            class="me-2 p-0 btn text-danger"
+                          <a class="me-2 p-0 btn text-danger deleteComment"
                             data-bs-toggle="modal" 
                             data-bs-target="#deleteModal"
                             data-comment-id="{{ reply.id }}">
                             Delete
-                          </button>
+                          </a>
                         {% endif %}
                       </div>
                     </div>
@@ -297,17 +269,29 @@
   </div>
 </div>
 <script type="module">
-  document.addEventListener("DOMContentLoaded", function() {
+  document.addEventListener("DOMContentLoaded", () => {
     // Function to update the delete link in the modal
-    var deleteModal = document.getElementById('deleteModal');
-    deleteModal.addEventListener('show.bs.modal', function (event) {
-      var triggerElement = event.relatedTarget; // The `a` tag that triggered the modal
-      var commentId = triggerElement.getAttribute('data-comment-id'); // Extract comment ID
+    let deleteModal = document.getElementById('deleteModal');
 
-      // Update the modal's delete link with the comment ID
-      var deleteForm = deleteModal.querySelector('#delete-form');
-      deleteForm.action = "{% url 'comment-delete' post.id 0 %}".replace('/0/', '/' + commentId + '/');
-      console.log('href', deleteLink.href);
+    deleteModal.addEventListener('show.bs.modal', (event) => {
+      const deleteText = document.getElementById('deleteText');
+      let triggerElement = event.relatedTarget;
+      if (triggerElement.classList.contains('deleteComment')) {
+        let commentId = triggerElement.getAttribute('data-comment-id');
+        deleteText.textContent = 'Are you sure that you want to delete this comment?';
+
+        // Update the modal's delete link with the comment ID
+        let deleteForm = deleteModal.querySelector('#delete-form');
+        deleteForm.action = "{% url 'comment-delete' post.id 0 %}".replace('/0/', '/' + commentId + '/');
+      }
+      else if (triggerElement.classList.contains('deletePost')) {
+        let postId = triggerElement.getAttribute('data-post-id');
+        deleteText.textContent = 'Are you sure that you want to delete this post?';
+
+        // Update the modal's delete link with the comment ID
+        let deleteForm = deleteModal.querySelector('#delete-form');
+        deleteForm.action = "{% url 'post-delete' post.id %}";
+      }
     });
   });
 </script>
