Commit 8.6: Implemented post edit functionality and finished styling

--- a/blog/templates/blog/dashboard.html
+++ b/blog/templates/blog/dashboard.html
@@ -76,7 +76,7 @@
               <div class="see-more-container">
                 <span class="d-block text-description">Bio: {{ user.profile.bio|linebreaksbr }}</span>
               </div>
-              <span class="see-more-btn btn btn-link bg-trasnparent border-0 cursor-pointer text-primary p-0 text-decoration-none text-start mt-1 text-grey-500 d-none">Show More</span>
+              <span class="see-more-btn btn btn-link bg-trasnparent border-0 cursor-pointer text-primary p-0 text-decoration-none text-start text-grey-500 d-none">Show More</span>
               {% endif %}
             </div>
           </div>
