--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -1,7 +1,5 @@
 {% extends 'blog/_base.html'%}
-{% block title %}
-FaceBlog log in or sign up
-{% endblock %}
+{% block title %}FaceBlog log in or sign up{% endblock %}
 {% block content %}
 <style> .navbar { display: none; } </style>
 <div class="d-flex flex-column justify-content-center align-items-center min-vh-100">
